--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.3.1
 Django==3.1.4
+django-cors-headers==3.7.0
+djangorestframework==3.12.2
+numpy==1.20.1
+pandas==1.2.2
+python-dateutil==2.8.1
 pytz==2020.4
+six==1.15.0
 sqlparse==0.4.1
