--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ asgiref==3.3.1
 Django==3.1.4
 django-cors-headers==3.7.0
 djangorestframework==3.12.2
+et-xmlfile==1.0.1
+jdcal==1.4.1
 numpy==1.20.1
+openpyxl==3.0.6
 pandas==1.2.2
 python-dateutil==2.8.1
 pytz==2020.4
