--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 \mdpVenv
-\mdp\fifteenmmdp\media\meterFile
+mdp/fifteenmmdp/templates/
+mdp/fifteenmmdp/static/
+mdp\fifteenmmdp\media\meterFile
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
